--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>WDD 230 Assignment Portal: David G Spahr</title>
+    <meta name="description" content="Assignment portal for David Spahr in WDD 230: Frontend Development.">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <p>It's a new term!!</p>
+    <header>
+        <img src="images/FamilyTripToEskimoJoes.jpg" alt="Flight to Stillwater Oklahoma for Eskimo Joe's">
+        <h1>David G. Spahr</h1>
+    </header>
+    <main>
+        <h2>WDD 230: Assignment Portal</h2>
+        <ul>
+            <li>Lesson 01: <a href="https://codepen.io/DSpahr/pen/bGmBxQx">Applied JavaScript</a></li>
+            <li>Lesson 02: <a href="#">Title</a></li>
+            <li>Lesson 03: <a href="#">Title</a></li>
+            <li>Lesson 04: <a href="#">Title</a></li>
+            <li>Lesson 05: <a href="#">Title</a></li>
+            <li>Lesson 06: <a href="#">Title</a></li>
+            <li>Lesson 07: <a href="#">Title</a></li>
+            <li>Lesson 08: <a href="#">Title</a></li>
+            <li>Lesson 09: <a href="#">Title</a></li>
+            <li>Lesson 10: <a href="#">Title</a></li>
+            <li>Lesson 11: <a href="#">Title</a></li>
+        </ul>
+    </main>
+    <footer>
+        <p>&copy; <span class="year"></span> | David G. Spahr | Kansas</p>
+        <p>Last Updated: <span class="modifieddate"></span></p>
+    </footer>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
