--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
             <li>Lesson 01: <a href="https://codepen.io/DSpahr/pen/bGmBxQx">Applied JavaScript</a></li>
             <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
-            <li>Lesson 03: <a href="#">Title</a></li>
+            <li>Lesson 03: <a href="lesson3">Hutchinson Chamber of Commerce</a></li>
             <li>Lesson 04: <a href="#">Title</a></li>
             <li>Lesson 05: <a href="#">Title</a></li>
             <li>Lesson 06: <a href="#">Title</a></li>
