--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
             <li>Lesson 03: <a href="lesson3">Hutchinson Chamber of Commerce</a></li>
             <li>Lesson 04: <a href="chamber">Chamber of Commerce Homepage</a></li>
-            <li>Lesson 05: <a href="#">Title</a></li>
+            <li>Lesson 05: <a href="lesson5">Book of Mormon Top-10</a></li>
             <li>Lesson 06: <a href="#">Title</a></li>
             <li>Lesson 07: <a href="#">Title</a></li>
             <li>Lesson 08: <a href="#">Title</a></li>
