--- a/chamber/index.html
+++ b/chamber/index.html
@@ -76,15 +76,30 @@
         <div id="spots" class="style">
             <div class="spot1 color">
                 <h3>Spotlight1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus perspiciatis blanditiis laborum corporis vitae reiciendis ut accusantium provident numquam qui.</p>
+                <img src="https://unsplash.it/80/80">
+                <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
+                <div class="contact">
+                    <p>email address</p>
+                    <p>phone number</p>
+                </div>
             </div>
             <div class="spot2 color">
                 <h3>Spotlight2</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut recusandae veniam commodi rerum voluptas excepturi tempora praesentium neque, dolore ipsa.</p>
+                <img src="https://unsplash.it/80/80">
+                <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
+                <div class="contact">
+                    <p>email address</p>
+                    <p>phone number</p>
+                </div>
             </div>
             <div class="spot3 color">
                 <h3>Spotlight3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dicta sint reiciendis et unde temporibus, sunt soluta praesentium explicabo corporis.</p>
+                <img src="https://unsplash.it/80/80">
+                <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
+                <div class="contact">
+                    <p>email address</p>
+                    <p>phone number</p>
+                </div>
             </div>
         </div>
         <div id="join" class="style">
