Common use license requirement added to hero pic.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,6 +52,7 @@
             <div class="image">
                 <img src="images/hutchstatefair2014.jpeg" alt="2014 Kansas State Fair">
                 <button class="action">Join the Chamber</button>
+                <p id="credit">Photo By: Ichabod | <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">License</a></p>
             </div>
         </section>
         <section id="event" class="style">
@@ -76,7 +77,7 @@
         <div id="spots" class="style">
             <div class="spot1 color">
                 <h3>Spotlight1</h3>
-                <img src="https://unsplash.it/80/80">
+                <img src="https://unsplash.it/80/80" alt="Placeholder">
                 <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="contact">
                     <p>email address</p>
@@ -85,7 +86,7 @@
             </div>
             <div class="spot2 color">
                 <h3>Spotlight2</h3>
-                <img src="https://unsplash.it/80/80">
+                <img src="https://unsplash.it/80/80" alt="Placeholder">
                 <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="contact">
                     <p>email address</p>
@@ -94,7 +95,7 @@
             </div>
             <div class="spot3 color">
                 <h3>Spotlight3</h3>
-                <img src="https://unsplash.it/80/80">
+                <img src="https://unsplash.it/80/80" alt="Placeholder">
                 <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="contact">
                     <p>email address</p>
