--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hutcinson Chamber of Commerce - WDD230</title>
+    <title>Hutchinson Chamber of Commerce - WDD230</title>
     <!-- Link to fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 
 
 <body>
-
+<!-- HEADER AREA -->
     <header>
         <div class="banner">
             <p>&#129309; Come join us for the chamber meet and greet Wednesday at 7:00 p.m. <button class="banBtn">&#10060;</button></p>
@@ -50,7 +50,7 @@
         </nav>
     </header>
 
-
+<!-- MAIN PAGE AREA -->
     <main class="mainContent">
         <section id="hero">
             <h3>Welcome to Hutchinson</h3>
@@ -120,7 +120,7 @@
         </div>
     </main>
 
-
+<!-- FOOTER AREA -->
     <footer>
         <img class="ftlogo" src="images/cocsmall.webp" alt="Hutchinson Chamber of Commerce logo">
         <div id="contact">    
