--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Lesson 03: <a href="lesson3">Hutchinson Chamber of Commerce</a></li>
             <li>Lesson 04: <a href="chamber">Chamber of Commerce Homepage</a></li>
             <li>Lesson 05: <a href="lesson5/bom.html">Book of Mormon Top-10</a></li>
-            <li>Lesson 06: <a href="#">Title</a></li>
+            <li>Lesson 06: <a href="lesson7">Progressive Loading of Images</a></li>
             <li>Lesson 07: <a href="#">Title</a></li>
             <li>Lesson 08: <a href="#">Title</a></li>
             <li>Lesson 09: <a href="#">Title</a></li>
