--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,7 +42,7 @@
             </div>
             <ul id="mainNav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Contact</a></li>
