--- a/chamber/join.html
+++ b/chamber/join.html
@@ -51,7 +51,7 @@
     </header>
 
 <!-- MAIN PAGE AREA -->
-    <main id="join">
+    <main id="joinpg">
         <h1>Join The Hutchinson <br>Chamber of Commerce</h1>
         <form method="get" action="thankyou.html">
             <fieldset class="con">
