--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -15,9 +15,9 @@
         <img src="images/placeholder.webp" data-src="images/fam.webp" alt="Family" width="300" height="400"> 
         <img src="images/placeholder.webp" data-src="images/momsboys.webp" alt="Family" width="300" height="400">
         <img src="images/placeholder.webp" data-src="images/parallellanding.webp" alt="Family" width="300" height="400">
-        <img src="images/placeholder.webp" data-src="images/pittsburgh.webp" alt="Family" loading="lazy" width="300" height="400">
-        <img src="images/placeholder.webp" data-src="images/redisgood.webp" alt="Family" loading="lazy" width="300" height="400">
-        <img src="images/placeholder.webp" data-src="images/c177checkout.webp" alt="Family" loading="lazy" width="300" height="400">
+        <img src="images/placeholder.webp" data-src="images/pittsburgh.webp" alt="Family" width="300" height="400">
+        <img src="images/placeholder.webp" data-src="images/redisgood.webp" alt="Family" width="300" height="400">
+        <img src="images/placeholder.webp" data-src="images/c177checkout.webp" alt="Family" width="300" height="400">
     </div>
 <script src="scripts/script.js" defer></script>
 </body>
