--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         <p calss="update">Last Updated: <span class="modifieddate"></span></p>
     </footer>
     <script src="scripts/script.js"></script>
+    <script src="scripts/windchill.js"></script>
 </body>
 </html>
