Directory page, updated join page

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -52,7 +52,10 @@
 
 <!-- MAIN PAGE AREA -->
     <main id="joinpg">
-        <h1>Join The Hutchinson <br>Chamber of Commerce</h1>
+        <div id="jnh2">
+            <h2>Join The Hutchinson</h2>
+            <h2>Chamber of Commerce</h2>
+        </div>
         <form method="get" action="thankyou.html">
             <fieldset class="con">
                 <label class="top">First Name*<input type="text" name="fname" required></label>
@@ -78,6 +81,47 @@
 
             <input type="submit" value="Join the Chamber" class="subBtn">
         </form>
+
+        <table id="memtable">
+            <caption>Table 1: Membership Levels</caption>
+            <thead>
+                <tr class="title">
+                    <th colspan="4" scope="colgroup">Membership Comparison</th>
+                </tr>
+                <tr>
+                    <th class="headings" scope="col">Level</th>
+                    <th class="headings" scope="col">Price</th>
+                    <th class="headings" scope="col">Marketing</th>
+                    <th class="headings" scope="col">Policy Meetings</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Not for Profit</td>
+                    <td>$0.00</td>
+                    <td>3 Month/Yr Digital</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>Bronze</td>
+                    <td>$1,000.00</td>
+                    <td>6 Months Digital</td>
+                    <td>Executive Annual Evening with Board of Directors</td>
+                </tr>
+                <tr>
+                    <td>Silver</td>
+                    <td>$3,000.00</td>
+                    <td>Year Round Digital</td>
+                    <td>Invitation to Annaul Economic Devlopment Breakfast</td>
+                </tr>
+                <tr>
+                    <td>Gold</td>
+                    <td>$5,000.00</td>
+                    <td>Premium Home Page Spotlight</td>
+                    <td>Executive Invitation to meet Legislatures</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 
 <!-- FOOTER AREA -->
