--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hutchinson Chamber of Commerce - WDD230</title>
-    <!-- Link to fonts -->
+    <!-- Link to fonts and icons-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Prompt&display=swap" rel="stylesheet">
+
     <!-- Links to css files -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -52,7 +53,12 @@
 
 <!-- MAIN PAGE AREA -->
     <main id="directory">
-        <div class="dirlist"></div>
+        <div class="buttons">
+            <button id="grid">Grid</button>
+            <button id="list">List</button>
+        </div>
+        <hr>
+        <div id="dirlist" class="dirlist"></div>
     </main>
 
 <!-- FOOTER AREA -->
