Weather API Assignment

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Lesson 07: <a href="#">Title</a></li>
             <li>Lesson 08: <a href="lesson8/tablebuild.html">Table Build</a></li>
             <li>Lesson 09: <a href="lesson9/prophets.html">Prophet Cards</a></li>
-            <li>Lesson 10: <a href="#">Title</a></li>
+            <li>Lesson 10: <a href="weatherapi/weather-api.html">Weather API</a></li>
             <li>Lesson 11: <a href="#">Title</a></li>
         </ul>
     </main>
