Added data source

--- a/weatherapi/weather-api.html
+++ b/weatherapi/weather-api.html
@@ -11,9 +11,10 @@
     <p>The current temperature in <br>Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
     <h2>Current Condition Icon</h2>
     <figure>
-    <img src="#" alt="" id="weather-icon" />
-    <figcaption></figcaption>
-</figure>
+        <img src="#" alt="" id="weather-icon" />
+        <figcaption></figcaption>
+    </figure>
+    <p class="source">Weather Data provided by <strong>OpenWeatherMap</strong></p>
 <script src="scripts/weatherapi.js"></script>
 </body>
 </html>
