--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,10 +73,11 @@
 
         <section id="weather" class="style">
             <h3>Weather</h3>
-            <p>&#127781; <span id="temp">57</span>&deg; F</p>
-            <p>Partly Cloudy</p>
-            <p>Wind Speed: <span id="ws">20</span> mph</p>
-            <p>Wind Chill: <span id="wc"></span></p>
+            <p><span id="weathericon"></span><span id="temp"></span>&deg; F</p>
+            <p><span id="descr"></span></p>
+            <p>Wind Speed: <span id="ws"></span> mph<br>Wind Chill: <span id="wc"></span></p>
+            <!-- <p>Wind Chill: <span id="wc"></span></p> -->
+            <p class="source">Weather data provided by: <strong>OpenWeatherMap</strong></p>
         </section>
 
         <section id="news" class="style">
