Week 10 - Weather API

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,7 +73,10 @@
 
         <section id="weather" class="style">
             <h3>Weather</h3>
-            <p><span id="weathericon"></span><span id="temp"></span>&deg; F</p>
+            <div class="flexcon">
+                <img src="#" alt="#" id="weathericon">
+                <p><span id="temp"></span>&deg; F</p>
+            </div>
             <p><span id="descr"></span></p>
             <p>Wind Speed: <span id="ws"></span> mph<br>Wind Chill: <span id="wc"></span></p>
             <!-- <p>Wind Chill: <span id="wc"></span></p> -->
