--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,7 +45,7 @@
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -89,7 +89,7 @@
         </section>
 
         <div id="spots" class="style">
-            <div class="spot1 color">
+            <!-- <div class="spot1 color">
                 <h3>Spotlight1</h3>
                 <img src="https://unsplash.it/80/80" alt="Placeholder">
                 <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
@@ -115,7 +115,7 @@
                     <p>email address</p>
                     <p>phone number</p>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div id="join" class="style">
