Chamber pages completed

--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -52,9 +52,22 @@
 
 <!-- MAIN PAGE AREA -->
     <main id="maincontact">
-        <div id="conpg">
+        <h2>Chamber Contact Info</h2>
+        <section class="contactinfo">
+            <div class="chamber cnt">
+                <h3>Mailing Address</h3>
+                <p>Chamber of Commerce<br>117 N. Walnut<br>P.O. Box 519<br>Hutchinson, KS 67504</p>
+            </div>
+            <div class="office cnt">
+                <h3>Office Hours</h3>
+                <p>Monday - Friday<br>9:00am to 5:00pm</p>
+            </div>
+            <div class="poc cnt">
+                <h3>Point of Contact</h3>
+                <p>David Spahr<br>dspahr@hutchcc.gov</p>        
+            </div>
+        </section>
             
-        </div>
         <form method="get" action="thankyou.html">
             <fieldset class="con">
                 <label class="top">First Name*<input type="text" name="fname" required></label>
