--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,11 +55,7 @@
         <section id="hero">
             <h3>Welcome to Hutchinson</h3>
             <div class="image">
-                <img src="images/wdd230-org.jpg" alt="meeting" sizes="100vw"
-                    srcset="images/wdd230-org400.jpg 200w,
-                            images/wdd230-org600.jpg 600w, 
-                            images/wdd230-org1080.jpg 1060w">
-                <!-- <img src="images/hutchstatefair2014.jpeg" alt="2014 Kansas State Fair"> -->
+                <img src="images/hutchstatefair2014.jpeg" alt="2014 Kansas State Fair">
                 <button class="action">Join the Chamber</button>
                 <p id="credit">Photo By: Ichabod | <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">License</a></p>
             </div>
@@ -79,8 +75,7 @@
             </div>
             <p><span id="descr"></span></p>
             <p>Wind Speed: <span id="ws"></span> mph<br>Wind Chill: <span id="wc"></span></p>
-            <!-- <p>Wind Chill: <span id="wc"></span></p> -->
-            <p class="source">Weather data provided by: <strong>OpenWeatherMap</strong></p>
+            <p class="source">Weather data provided by: <a href="https://openweathermap.org/"><strong>OpenWeatherMap</strong></a></p>
         </section>
 
         <section id="news" class="style">
@@ -88,35 +83,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, debitis excepturi velit reiciendis dolore provident deleniti suscipit, possimus, ad sed ipsum explicabo amet perspiciatis quisquam numquam maxime odio. Laboriosam, repudiandae!</p>
         </section>
 
-        <div id="spots" class="style">
-            <!-- <div class="spot1 color">
-                <h3>Spotlight1</h3>
-                <img src="https://unsplash.it/80/80" alt="Placeholder">
-                <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
-                <div class="contact">
-                    <p>email address</p>
-                    <p>phone number</p>
-                </div>
-            </div>
-            <div class="spot2 color">
-                <h3>Spotlight2</h3>
-                <img src="https://unsplash.it/80/80" alt="Placeholder">
-                <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
-                <div class="contact">
-                    <p>email address</p>
-                    <p>phone number</p>
-                </div>
-            </div>
-            <div class="spot3 color">
-                <h3>Spotlight3</h3>
-                <img src="https://unsplash.it/80/80" alt="Placeholder">
-                <p class="pspot">Lorem ipsum dolor sit amet consectetur.</p>
-                <div class="contact">
-                    <p>email address</p>
-                    <p>phone number</p>
-                </div>
-            </div> -->
-        </div>
+        <div id="spots" class="style"></div>
 
         <div id="join" class="style">
             <button class="joinBtn">Join Us!</button>
